unpackaged/main/default/objects/Log_History__c/Log_History__c.object-meta.xml
<CustomObject>
    <label>Log History</label>
    <nameField>
        <label>Log History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>