unpackaged/main/default/objects/Log_History__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Log Histories</relationshipLabel>
    <relationshipName>Log_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>