unpackaged/main/default/objects/Log_History__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Log Histories</relationshipLabel>
    <relationshipName>Log_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>