unpackaged/main/default/objects/Log_History__c/fields/Log_Actor__c.field-meta.xml
<CustomField>
    <fullName>Log_Actor__c</fullName>
    <label>Log Actor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>