unpackaged/main/default/objects/Log_History__c/fields/Log_Contact__c.field-meta.xml
<CustomField>
    <fullName>Log_Contact__c</fullName>
    <label>Log Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>