unpackaged/main/default/objects/Log_History__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <label>Log Date Time</label>
    <type>DateTime</type>
</CustomField>