unpackaged/main/default/objects/Log_History__c/fields/Log_Notes__c.field-meta.xml
<CustomField>
    <fullName>Log_Notes__c</fullName>
    <label>Log Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>