unpackaged/main/default/objects/Log_History__c/fields/Log_Result__c.field-meta.xml
<CustomField>
    <fullName>Log_Result__c</fullName>
    <label>Log Result</label>
    <length>150</length>
    <type>Text</type>
</CustomField>