unpackaged/main/default/objects/Log_History__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>