unpackaged/main/default/objects/Log_History__c/fields/Velocify_Id__c.field-meta.xml
<CustomField>
    <fullName>Velocify_Id__c</fullName>
    <label>Velocify Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>